# pathcheck

./: Cargo.toml  Justfile  README.md  path-test
src/: args.rs  formatting.rs  main.rs  strings.rs  utils.rs
