[package]
name = "pathcheck"
version = "1.0.1"
edition = "2024"
authors = ["valcubeto@proton.me"]
description = "Check the status of folders listed in $PATH."
categories = ["command-line-utilities"]
keywords = ["cli", "terminal"]
license = "MIT"
repository = "https://github.com/valcubeto/pathcheck"
readme = "README.md"
exclude = ["Justfile", "path-test"]

[[bin]]
name = "pathcheck"
path = "src/main.rs"

[dependencies]
faccess = "0.2.4"

[dependencies.lazy-regex]
version = "3.6.0"

[dependencies.libc]
version = "0.2.182"
default-features = false

[dependencies.owo-colors]
version = "4.3.0"
default-features = false
features = ["supports-colors"]

[dependencies.clap]
version = "4.5.60"
default-features = false
features = ["std", "derive", "suggestions", "usage", "help"]
